<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.Login">

    <TextView
        android:id="@+id/MainTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="10dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/MainTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/EdiEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/MainTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toStartOf="@+id/EdiPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainTextEmail" />

    <EditText
        android:id="@+id/EdiEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="71dp"
        android:ems="10"
        android:hint="Digite su Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/EdiPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/MainTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/EdiPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="Digite su contraseña"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/MainTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/EdiEmail" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="238dp"
        android:layout_height="49dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="96dp"

        android:onClick="Login"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/bonton"
        app:layout_constraintBottom_toTopOf="@+id/buttonNewUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EdiPassword" />

    <Button
        android:id="@+id/buttonNewUser"
        android:layout_width="238dp"
        android:layout_height="49dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="218dp"
        android:background="@drawable/bonton"
        android:onClick="CrearUsuario"
        android:text="@string/newuser"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="194dp"
        android:layout_height="202dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/EdiEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />
</androidx.constraintlayout.widget.ConstraintLayout>