<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".Main.NewUser">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="647dp">

                <TextView
                    android:id="@+id/NewTextNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/nombre"
                    app:layout_constraintBottom_toTopOf="@+id/NewTextApellido"
                    app:layout_constraintEnd_toStartOf="@+id/NewEdiNombre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/NewTextApellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/apellido"
                    app:layout_constraintBottom_toTopOf="@+id/NewTextEmail"
                    app:layout_constraintEnd_toStartOf="@+id/NewEdiApellido"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/NewTextNombre" />

                <TextView
                    android:id="@+id/NewTextEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/email"
                    app:layout_constraintBottom_toTopOf="@+id/NewTextPassword"
                    app:layout_constraintEnd_toStartOf="@+id/NewEdiEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/NewTextApellido" />

                <TextView
                    android:id="@+id/NewTextPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/password"
                    app:layout_constraintBottom_toTopOf="@+id/textView30"
                    app:layout_constraintEnd_toStartOf="@+id/NewEdiPassword"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/NewTextEmail" />

                <EditText
                    android:id="@+id/NewEdiNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="73dp"
                    android:ems="10"
                    android:hint="Digite su nombre"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/NewEdiApellido"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/NewTextNombre"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/NewEdiApellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="73dp"
                    android:ems="10"
                    android:hint="@string/digite_su_apellido"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/NewEdiEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/NewTextApellido"
                    app:layout_constraintTop_toBottomOf="@+id/NewEdiNombre"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/NewEdiEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="73dp"
                    android:ems="10"
                    android:hint="@string/digite_su_correo"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/NewEdiPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/NewTextEmail"
                    app:layout_constraintTop_toBottomOf="@+id/NewEdiApellido"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/NewEdiPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="72dp"
                    android:layout_marginBottom="11dp"
                    android:ems="10"
                    android:hint="@string/digite_su_contrase_a"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/NewEdiTelfono"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/NewTextPassword"
                    app:layout_constraintTop_toBottomOf="@+id/NewEdiEmail"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="144dp"
                    android:layout_marginTop="29dp"
                    android:layout_marginEnd="167dp"
                    android:text="Que rol eres ?"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/NewEdiTelfono" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="140dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/NewEdiIdpropietario"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/NewTextIdpropietario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginBottom="60dp"
                    android:text="IDpropietario"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toStartOf="@+id/NewEdiIdpropietario"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView30" />

                <EditText
                    android:id="@+id/NewEdiIdpropietario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="55dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="0"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/NewTextIdpropietario"
                    app:layout_constraintTop_toBottomOf="@+id/spinner" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="152dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="163dp"
                    android:layout_marginBottom="50dp"
                    android:text="Registrarse"
                    android:onClick="registrarUsuario"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/NewEdiIdpropietario" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="70dp"
                    android:text="Telefono"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/NewTextPassword" />

                <EditText
                    android:id="@+id/NewEdiTelfono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="73dp"
                    android:layout_marginBottom="28dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView30"
                    app:layout_constraintTop_toBottomOf="@+id/NewEdiPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>